samples/_failures_safe/1761452334_3d77e3_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3ad0f104.c: In function ‘main’:
./samples/SAFE/__tmp_3ad0f104.c:140:5: error: expected declaration or statement at end of input
  140 |     print_matrix(&mat1);
      |     ^~~~~~~~~~~~
